umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_small_molecule_crystal99first.sdf.snap
---
source: umol-io/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 39, col 15"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 39, col 15"
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 75, col 0"
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 75, col 0"
